// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application Timeline - My Experience should render Experience Intro 1`] = `
<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  formats={Object {}}
  locale="en"
  messages={null}
  onError={[Function]}
  textComponent={Symbol(react.fragment)}
>
  <ExperienceIntro
    handleStart={[Function]}
  />
</IntlProvider>
`;

exports[`Application Timeline - My Experience should render MyExperience with items 1`] = `
<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  formats={Object {}}
  locale="en"
  messages={null}
  onError={[Function]}
  textComponent={Symbol(react.fragment)}
>
  <MyExperience
    assetSkills={
      Array [
        Object {
          "classifications": Array [
            Object {
              "key": "CS",
            },
            Object {
              "key": "EX",
            },
          ],
          "description": Object {
            "en": "Defined as: Developing applications using open source tools and languages.",
            "fr": "Se définissant comme suit : Développement d'applications à l'aide d'outils et de langages à source ouverte.",
          },
          "id": 15,
          "is_culture_skill": false,
          "is_future_skill": true,
          "name": Object {
            "en": "Open Source Development",
            "fr": "Développement de sources ouvertes",
          },
          "skill_type_id": 2,
        },
        Object {
          "classifications": Array [
            Object {
              "key": "EX",
            },
          ],
          "description": Object {
            "en": "Defined as: Treating all those in the work environment with fairness, courtesy and respect for differences; performing the job in a manner that upholds the public trust and values co-workers.",
            "fr": "Se définissant comme suit : Capacité de traiter le personnel du milieu de travail avec équité, courtoisie et respect des différences et d'effectuer le travail de manière à maintenir la confiance du public et à respecter les valeurs de ses collègues.",
          },
          "id": 20,
          "is_culture_skill": true,
          "is_future_skill": false,
          "name": Object {
            "en": "Integrity",
            "fr": "Intégrité",
          },
          "skill_type_id": 1,
        },
      ]
    }
    educationStatuses={
      Array [
        Object {
          "id": 1,
          "name": Object {
            "en": "Successful Completion (Certificate Awarded)",
            "fr": "Réussite (certificat délivré)",
          },
        },
        Object {
          "id": 2,
          "name": Object {
            "en": "Successful Completion (No Certificate Awarded)",
            "fr": "Réussite (aucun certificat accordé)",
          },
        },
        Object {
          "id": 3,
          "name": Object {
            "en": "In Progress",
            "fr": "En cours",
          },
        },
        Object {
          "id": 4,
          "name": Object {
            "en": "Audited",
            "fr": "Audité",
          },
        },
        Object {
          "id": 5,
          "name": Object {
            "en": "Did Not Complete",
            "fr": "N'a pas complété",
          },
        },
      ]
    }
    educationTypes={
      Array [
        Object {
          "id": 1,
          "name": Object {
            "en": "Diploma",
            "fr": "Diplôme",
          },
        },
        Object {
          "id": 2,
          "name": Object {
            "en": "Bachelor's Degree",
            "fr": "Licence",
          },
        },
        Object {
          "id": 3,
          "name": Object {
            "en": "Master's Degree",
            "fr": "Maîtrise",
          },
        },
        Object {
          "id": 4,
          "name": Object {
            "en": "Post-doctoral Fellowship",
            "fr": "Bourse post-doctorale",
          },
        },
        Object {
          "id": 5,
          "name": Object {
            "en": "Online Course",
            "fr": "Cours en ligne",
          },
        },
        Object {
          "id": 6,
          "name": Object {
            "en": "Certification",
            "fr": "Certification",
          },
        },
        Object {
          "id": 7,
          "name": Object {
            "en": "Other",
            "fr": "Autres",
          },
        },
      ]
    }
    essentialSkills={
      Array [
        Object {
          "classifications": Array [
            Object {
              "key": "CS",
            },
          ],
          "description": Object {
            "en": "Defined as: Developing web applications using HTML5, CSS3, Javascript",
            "fr": "Se définissant comme suit : Développement d'applications Web à l'aide de HTML5, CSS3 et JavaScript.",
          },
          "id": 1,
          "is_culture_skill": false,
          "is_future_skill": false,
          "name": Object {
            "en": "Front-end development",
            "fr": "Développement frontal",
          },
          "skill_type_id": 2,
        },
        Object {
          "classifications": Array [
            Object {
              "key": "CS",
            },
          ],
          "description": Object {
            "en": "Defined as: Developing web applications using Javascript and a server side language such as PHP, Python or other",
            "fr": "Se définissant comme suit : Développement d'applications Web à l'aide de JavaScript et un langage finaux comme PHP, Python ou autre",
          },
          "id": 2,
          "is_culture_skill": false,
          "is_future_skill": false,
          "name": Object {
            "en": "Web Programming",
            "fr": "Programmation Web",
          },
          "skill_type_id": 2,
        },
      ]
    }
    experienceRequirements={
      Object {
        "educationRequirement": Object {
          "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, officiis delectus excepturi voluptate laudantium omnis nesciunt consectetur eum sapiente aliquid ipsam obcaecati expedita odio id eligendi voluptatum. Consequuntur, quibusdam voluptates.",
          "title": "2 Years Post-secondary",
        },
        "equivalentRequirment": Object {
          "description": "ELorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus animi consequatur dolorem voluptatum earum iure doloremque, facere est asperiores, dignissimos quae architecto vero unde vitae quis excepturi! Totam, libero.",
          "title": "Equivalent Experience",
        },
      }
    }
    experienceSkills={
      Array [
        Object {
          "created_at": 2015-01-07T14:00:00.000Z,
          "experience_id": 1,
          "experience_type": "experience_education",
          "id": 1,
          "justification": "This is a sample education justification.",
          "skill_id": 1,
          "updated_at": 2016-01-07T14:00:00.000Z,
        },
        Object {
          "created_at": 2015-01-07T14:00:00.000Z,
          "experience_id": 1,
          "experience_type": "experience_work",
          "id": 2,
          "justification": "",
          "skill_id": 1,
          "updated_at": 2016-01-07T14:00:00.000Z,
        },
        Object {
          "created_at": 2015-01-07T14:00:00.000Z,
          "experience_id": 1,
          "experience_type": "experience_personal",
          "id": 3,
          "justification": "",
          "skill_id": 20,
          "updated_at": 2016-01-07T14:00:00.000Z,
        },
        Object {
          "created_at": 2015-01-07T14:00:00.000Z,
          "experience_id": 1,
          "experience_type": "experience_community",
          "id": 4,
          "justification": "",
          "skill_id": 20,
          "updated_at": 2016-01-07T14:00:00.000Z,
        },
        Object {
          "created_at": 2015-01-07T14:00:00.000Z,
          "experience_id": 1,
          "experience_type": "experience_award",
          "id": 5,
          "justification": "",
          "skill_id": 15,
          "updated_at": 2016-01-07T14:00:00.000Z,
        },
      ]
    }
    experiences={
      Array [
        Object {
          "end_date": 2019-12-13T14:00:00.000Z,
          "experienceable_id": 1,
          "experienceable_type": "applicant",
          "group": "Research Division",
          "id": 1,
          "is_active": false,
          "is_education_requirement": true,
          "organization": "ACME Labs.",
          "start_date": 2015-01-07T14:00:00.000Z,
          "title": "Applied Researched",
          "type": "experience_work",
        },
        Object {
          "area_of_study": "Engineering",
          "education_status_id": 1,
          "education_type_id": 1,
          "end_date": 2015-04-30T13:00:00.000Z,
          "experienceable_id": 1,
          "experienceable_type": "applicant",
          "has_blockcert": true,
          "id": 1,
          "institution": "University of Toronto",
          "is_active": false,
          "is_education_requirement": false,
          "start_date": 2010-09-01T13:00:00.000Z,
          "thesis_title": "How do concrete structures withstand hurricane wind stress?",
          "type": "experience_education",
        },
        Object {
          "end_date": null,
          "experienceable_id": 1,
          "experienceable_type": "applicant",
          "group": "SPCA Ottawa",
          "id": 1,
          "is_active": true,
          "is_education_requirement": false,
          "project": "Adoption Weekend",
          "start_date": 2018-04-01T13:00:00.000Z,
          "title": "Volunteer",
          "type": "experience_community",
        },
        Object {
          "award_recipient_type_id": 1,
          "award_recognition_type_id": 1,
          "awarded_date": 2016-01-27T14:00:00.000Z,
          "experienceable_id": 1,
          "experienceable_type": "applicant",
          "id": 1,
          "is_education_requirement": false,
          "issued_by": "McGill University",
          "title": "Governor General's Award (Gold)",
          "type": "experience_award",
        },
        Object {
          "description": "Massa tincidunt nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum varius sit amet mattis vulputate enim nulla aliquet porttitor lacus luctus accumsan tortor posuere ac ut consequat semper viverra nam libero justo laoreet sit amet cursus sit amet dictum sit amet justo donec enim diam vulputate.",
          "end_date": null,
          "experienceable_id": 1,
          "experienceable_type": "applicant",
          "id": 1,
          "is_active": true,
          "is_education_requirement": false,
          "is_shareable": true,
          "start_date": 2013-04-01T13:00:00.000Z,
          "title": "Parenting",
          "type": "experience_personal",
        },
      ]
    }
    handleContinue={[Function]}
    handleDeleteExperience={[Function]}
    handleQuit={[Function]}
    handleReturn={[Function]}
    handleSubmitExperience={[Function]}
    jobId={1}
    recipientTypes={
      Array [
        Object {
          "id": 1,
          "name": Object {
            "en": "Me",
            "fr": "Moi",
          },
        },
        Object {
          "id": 2,
          "name": Object {
            "en": "My Team",
            "fr": "Mon équipe",
          },
        },
        Object {
          "id": 3,
          "name": Object {
            "en": "My Project",
            "fr": "Mon projet",
          },
        },
        Object {
          "id": 4,
          "name": Object {
            "en": "My Organization",
            "fr": "Mon organization",
          },
        },
      ]
    }
    recognitionTypes={
      Array [
        Object {
          "id": 1,
          "name": Object {
            "en": "International",
            "fr": "International",
          },
        },
        Object {
          "id": 2,
          "name": Object {
            "en": "National",
            "fr": "National",
          },
        },
        Object {
          "id": 3,
          "name": Object {
            "en": "Provincial",
            "fr": "Provincial",
          },
        },
        Object {
          "id": 4,
          "name": Object {
            "en": "Local",
            "fr": "Local",
          },
        },
        Object {
          "id": 5,
          "name": Object {
            "en": "Community",
            "fr": "Communauté",
          },
        },
        Object {
          "id": 6,
          "name": Object {
            "en": "Organizational",
            "fr": "Organisation",
          },
        },
        Object {
          "id": 7,
          "name": Object {
            "en": "Sub-Organizational (Branch)",
            "fr": "Sous-Organisation (Branche)",
          },
        },
      ]
    }
  />
  ,
</IntlProvider>
`;

exports[`Application Timeline - My Experience should render MyExperience without any experiences 1`] = `
<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  formats={Object {}}
  locale="en"
  messages={null}
  onError={[Function]}
  textComponent={Symbol(react.fragment)}
>
  <MyExperience
    assetSkills={
      Array [
        Object {
          "classifications": Array [
            Object {
              "key": "CS",
            },
            Object {
              "key": "EX",
            },
          ],
          "description": Object {
            "en": "Defined as: Developing applications using open source tools and languages.",
            "fr": "Se définissant comme suit : Développement d'applications à l'aide d'outils et de langages à source ouverte.",
          },
          "id": 15,
          "is_culture_skill": false,
          "is_future_skill": true,
          "name": Object {
            "en": "Open Source Development",
            "fr": "Développement de sources ouvertes",
          },
          "skill_type_id": 2,
        },
        Object {
          "classifications": Array [
            Object {
              "key": "EX",
            },
          ],
          "description": Object {
            "en": "Defined as: Treating all those in the work environment with fairness, courtesy and respect for differences; performing the job in a manner that upholds the public trust and values co-workers.",
            "fr": "Se définissant comme suit : Capacité de traiter le personnel du milieu de travail avec équité, courtoisie et respect des différences et d'effectuer le travail de manière à maintenir la confiance du public et à respecter les valeurs de ses collègues.",
          },
          "id": 20,
          "is_culture_skill": true,
          "is_future_skill": false,
          "name": Object {
            "en": "Integrity",
            "fr": "Intégrité",
          },
          "skill_type_id": 1,
        },
      ]
    }
    educationStatuses={
      Array [
        Object {
          "id": 1,
          "name": Object {
            "en": "Successful Completion (Certificate Awarded)",
            "fr": "Réussite (certificat délivré)",
          },
        },
        Object {
          "id": 2,
          "name": Object {
            "en": "Successful Completion (No Certificate Awarded)",
            "fr": "Réussite (aucun certificat accordé)",
          },
        },
        Object {
          "id": 3,
          "name": Object {
            "en": "In Progress",
            "fr": "En cours",
          },
        },
        Object {
          "id": 4,
          "name": Object {
            "en": "Audited",
            "fr": "Audité",
          },
        },
        Object {
          "id": 5,
          "name": Object {
            "en": "Did Not Complete",
            "fr": "N'a pas complété",
          },
        },
      ]
    }
    educationTypes={
      Array [
        Object {
          "id": 1,
          "name": Object {
            "en": "Diploma",
            "fr": "Diplôme",
          },
        },
        Object {
          "id": 2,
          "name": Object {
            "en": "Bachelor's Degree",
            "fr": "Licence",
          },
        },
        Object {
          "id": 3,
          "name": Object {
            "en": "Master's Degree",
            "fr": "Maîtrise",
          },
        },
        Object {
          "id": 4,
          "name": Object {
            "en": "Post-doctoral Fellowship",
            "fr": "Bourse post-doctorale",
          },
        },
        Object {
          "id": 5,
          "name": Object {
            "en": "Online Course",
            "fr": "Cours en ligne",
          },
        },
        Object {
          "id": 6,
          "name": Object {
            "en": "Certification",
            "fr": "Certification",
          },
        },
        Object {
          "id": 7,
          "name": Object {
            "en": "Other",
            "fr": "Autres",
          },
        },
      ]
    }
    essentialSkills={
      Array [
        Object {
          "classifications": Array [
            Object {
              "key": "CS",
            },
          ],
          "description": Object {
            "en": "Defined as: Developing web applications using HTML5, CSS3, Javascript",
            "fr": "Se définissant comme suit : Développement d'applications Web à l'aide de HTML5, CSS3 et JavaScript.",
          },
          "id": 1,
          "is_culture_skill": false,
          "is_future_skill": false,
          "name": Object {
            "en": "Front-end development",
            "fr": "Développement frontal",
          },
          "skill_type_id": 2,
        },
        Object {
          "classifications": Array [
            Object {
              "key": "CS",
            },
          ],
          "description": Object {
            "en": "Defined as: Developing web applications using Javascript and a server side language such as PHP, Python or other",
            "fr": "Se définissant comme suit : Développement d'applications Web à l'aide de JavaScript et un langage finaux comme PHP, Python ou autre",
          },
          "id": 2,
          "is_culture_skill": false,
          "is_future_skill": false,
          "name": Object {
            "en": "Web Programming",
            "fr": "Programmation Web",
          },
          "skill_type_id": 2,
        },
      ]
    }
    experienceRequirements={
      Object {
        "educationRequirement": Object {
          "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, officiis delectus excepturi voluptate laudantium omnis nesciunt consectetur eum sapiente aliquid ipsam obcaecati expedita odio id eligendi voluptatum. Consequuntur, quibusdam voluptates.",
          "title": "2 Years Post-secondary",
        },
        "equivalentRequirment": Object {
          "description": "ELorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusamus animi consequatur dolorem voluptatum earum iure doloremque, facere est asperiores, dignissimos quae architecto vero unde vitae quis excepturi! Totam, libero.",
          "title": "Equivalent Experience",
        },
      }
    }
    experienceSkills={Array []}
    experiences={Array []}
    handleContinue={[Function]}
    handleDeleteExperience={[Function]}
    handleQuit={[Function]}
    handleReturn={[Function]}
    handleSubmitExperience={[Function]}
    jobId={1}
    recipientTypes={
      Array [
        Object {
          "id": 1,
          "name": Object {
            "en": "Me",
            "fr": "Moi",
          },
        },
        Object {
          "id": 2,
          "name": Object {
            "en": "My Team",
            "fr": "Mon équipe",
          },
        },
        Object {
          "id": 3,
          "name": Object {
            "en": "My Project",
            "fr": "Mon projet",
          },
        },
        Object {
          "id": 4,
          "name": Object {
            "en": "My Organization",
            "fr": "Mon organization",
          },
        },
      ]
    }
    recognitionTypes={
      Array [
        Object {
          "id": 1,
          "name": Object {
            "en": "International",
            "fr": "International",
          },
        },
        Object {
          "id": 2,
          "name": Object {
            "en": "National",
            "fr": "National",
          },
        },
        Object {
          "id": 3,
          "name": Object {
            "en": "Provincial",
            "fr": "Provincial",
          },
        },
        Object {
          "id": 4,
          "name": Object {
            "en": "Local",
            "fr": "Local",
          },
        },
        Object {
          "id": 5,
          "name": Object {
            "en": "Community",
            "fr": "Communauté",
          },
        },
        Object {
          "id": 6,
          "name": Object {
            "en": "Organizational",
            "fr": "Organisation",
          },
        },
        Object {
          "id": 7,
          "name": Object {
            "en": "Sub-Organizational (Branch)",
            "fr": "Sous-Organisation (Branche)",
          },
        },
      ]
    }
  />
</IntlProvider>
`;
